<resources>
    <string name="app_name">Weather</string>
    <string name="title_activity_test_location">TestLocationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="underline_policy"><u>Privacy Policy</u></string>
    <string name="string88">Choose language</string>
    <string-array name="temp_units">
        <item>°C</item>
        <item>°F</item>
    </string-array>
    <string-array name="rain_units">
        <item>mm</item>
        <item>inch</item>
    </string-array>
    <string-array name="distance_units">
        <item>km</item>
        <item>mile</item>
    </string-array>
    <string-array name="wind_units">
        <item>km/h</item>
        <item>mph</item>
    </string-array>
    <string-array name="pressure_units">
        <item>mmHg</item>
        <item>hPa</item>
    </string-array>
    <string-array name="time_format">
        <item>24 giờ</item>
        <item>12 giờ</item>
    </string-array>
    <string name="txt_view_detail"><u>Add Details</u></string>
    <string name="string1">Your location and weather</string>
    <string name="string2">This app will always use your device\'s location in the background to update weather information, local forecasts, and weather alerts when the location changes, even when the app is closed or not in use.</string>
    <string name="string3">If you do not want the app to use your location at all times, you can select location permission in the app to view weather at your current location or manually enter your location information.</string>
    <string name="string4">Allow</string>
    <string name="string5">Or</string>
    <string name="string6">Search manually</string>
    <string name="string7">Real time weather tracking</string>
    <string name="string8">Global weather map</string>
    <string name="string9">Weekly forecast</string>
    <string name="string10">Continue</string>
    <string name="string11">Allow permission</string>
    <string name="string12">The app needs access to your device\'s location to provide accurate weather forecasts.</string>
    <string name="string13">Choose language</string>
    <string name="string14">Apply</string>
    <string name="string15">Your actual location along with a stable internet connection will help determine your location more accurately.</string>
    <string name="string16">Location not found</string>
    <string name="string17">Unable to retrieve location because permission was denied</string>
    <string name="string18">Current location</string>
    <string name="string19">Feels like temperature</string>
    <string name="string20">Settings</string>
    <string name="string21">Temperature</string>
    <string name="string22">Precipitation</string>
    <string name="string23">Visibility</string>
    <string name="string24">Wind speed</string>
    <string name="string25">Pressure</string>
    <string name="string26">Time format</string>
    <string name="string27">Done</string>
    <string name="string28">Miles</string>
    <string name="string29">Hours</string>
    <string name="string30">Wind direction</string>
    <string name="string31">Humidity</string>
    <string name="string32">Today</string>
    <string name="string33">Sunday</string>
    <string name="string34">Monday</string>
    <string name="string35">Tuesday</string>
    <string name="string36">Wednesday</string>
    <string name="string37">Thursday</string>
    <string name="string38">Friday</string>
    <string name="string39">Saturday</string>
    <string name="string40">Access denied</string>
    <string name="string41">Rain expected in the next 120 minutes</string>
    <string name="string42">No rain expected in the next 120 minutes</string>
    <string name="string43">Weather</string>
    <string name="string44">Manage location</string>
    <string name="string45">Notifications</string>
    <string name="string46">Daily weather</string>
    <string name="string47">Live background</string>
    <string name="string48">Layout customization</string>
    <string name="string49">Theme</string>
    <string name="string50">Developer</string>
    <string name="string51">Remove ads</string>
    <string name="string52">Rate us</string>
    <string name="string53">Feedback &amp; suggestions</string>
    <string name="string54">Policy &amp; privacy</string>
    <string name="string55">Share</string>
    <string name="string56">Settings</string>
    <string name="string57">Upgrade</string>
    <string name="string58">Upgrade to VIP account</string>
    <string name="string59">One-time top-up</string>
    <string name="string60">Forever</string>
    <string name="string61">24h format</string>
    <string name="string62">Date format</string>
    <string name="string63">Data source</string>
    <string name="string64">Standard</string>
    <string name="string65">Messages</string>
    <string name="string66">Enter your feedback</string>
    <string name="string67">Your email (optional)</string>
    <string name="string68">Send</string>
    <string name="string69">Automatic detection feature is unstable</string>
    <string name="string70">Edit</string>
    <string name="string71">Add location</string>
    <string name="string72">Terms and Privacy</string>
    <string name="string73">Details</string>
    <string name="string74">Rain rate</string>
    <string name="string75">Wind speed (mph)</string>
    <string name="string76">Daily</string>
    <string name="string77">Remove all ads in the app</string>
    <string name="string78">Next 120 hours forecast</string>
    <string name="string79">30-day forecast</string>
    <string name="string80">Premium radar</string>
    <string name="string81">Sponsors help developers improve the app</string>
    <string name="string82">199.999đ / forever</string>
    <string name="string83">Cancel</string>
    <string name="string84">Agree</string>
    <string name="string85">We are a small development team committed to providing you with more free and easy-to-use products. We hope you\'ll give us a 5-star rating, as it will be the biggest motivation for us to keep improving the quality!</string>
    <string name="string86">Rate</string>
    <string name="string87">Default</string>
    <string name="string89">Clear sky</string>
    <string name="string90">Mainly clear</string>
    <string name="string91">Partly cloudy</string>
    <string name="string92">Overcast</string>
    <string name="string93">Fog</string>
    <string name="string94">Depositing rime fog</string>
    <string name="string95">Light drizzle</string>
    <string name="string96">Moderate drizzle</string>
    <string name="string97">Dense drizzle</string>
    <string name="string98">Light freezing drizzle</string>
    <string name="string99">Dense freezing drizzle</string>
    <string name="string100">Slight rain</string>
    <string name="string101">Moderate rain</string>
    <string name="string102">Heavy rain</string>
    <string name="string103">Light freezing rain</string>
    <string name="string104">Heavy freezing rain</string>
    <string name="string105">Slight snow fall</string>
    <string name="string106">Moderate snow fall</string>
    <string name="string107">Heavy snow fall</string>
    <string name="string108">Snow grains</string>
    <string name="string109">Slight rain showers</string>
    <string name="string110">Moderate rain showers</string>
    <string name="string111">Violent rain showers</string>
    <string name="string112">Slight snow showers</string>
    <string name="string113">Heavy snow showers</string>
    <string name="string114">Thunderstorm</string>
    <string name="string115">Thunderstorm with slight hail</string>
    <string name="string116">Thunderstorm with heavy hail</string>
    <string name="string117">Set to default location</string>
    <string name="string118">Cancel</string>
    <string name="string119">Ok</string>
</resources>